# yandex-audience-cli

./: .env.example  .gitignore  CLAUDE.md  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml  spec-audit.yml
docs/: architecture.md  authentication.md  development.md  index.md  installation.md  usage.md
docs/commands/: accounts.md  delegates.md  grants.md  pixels.md  segments.md
scripts/: fetch_spec.py  live_smoke.sh
tests/: conftest.py  test_cli.py  test_http_client.py  test_openapi_coverage.py  test_registry_coverage.py  test_registry_tree.py  test_resources.py  test_uploads.py
tests/data/: audience_spec.json
tests/e2e/: __init__.py  test_live_api.py  test_local_server.py
tests/integration/: __init__.py  test_cli_commands.py  test_resources.py  test_uploads.py
tests/smoke/: __init__.py  test_smoke.py
tests/unit/: __init__.py  test_http_client.py  test_registry_coverage.py  test_registry_tree.py
yac/: __init__.py  __main__.py  base.py  cli.py  client.py  config.py  context.py  inputs.py  models.py  openapi_coverage.py  output.py  render.py
yac/api/: __init__.py  accounts.py  delegates.py  grants.py  pixels.py  segments.py
yac/commands/: __init__.py  accounts.py  delegates.py  grants.py  pixels.py  segments.py
yac/registry/: __init__.py  _core.py
yac/registry/accounts/: __init__.py  list.py
yac/registry/delegates/: __init__.py  add.py  list.py  remove.py
yac/registry/grants/: __init__.py  add.py  list.py  remove.py
yac/registry/pixels/: __init__.py  create.py  delete.py  list.py  undelete.py  update.py
yac/registry/segments/: __init__.py  confirm.py  confirm_client_id.py  create_appmetrica.py  create_geo.py  create_geo_polygon.py  create_lookalike.py  create_metrika.py  create_pixel.py  delete.py  list.py  modify_data.py  reprocess.py  update.py  update_geo_points.py  upload_csv_file.py  upload_file.py
