[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "yandex-audience-cli"
version = "0.1.0"
description = "CLI, повторяющий структуру Yandex Audience API 1:1 (100% покрытие эндпоинтов)"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "yandex-audience-cli" }]
keywords = ["yandex", "audience", "api", "cli", "advertising"]
dependencies = [
    "typer>=0.12",
    "httpx>=0.27",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
    "respx>=0.21",
]

[project.scripts]
yac = "yac:app"

# Раскладка-пакет: весь код под пакетом yac/ (с подпакетами api/ и commands/).
# Имена модулей живут в namespace yac.* и не конфликтуют с чужими top-level
# модулями в глобальном sys.path.
[tool.hatch.build.targets.wheel]
packages = ["yac"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"
