[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "yandex-audience-cli"
version = "0.1.0"
description = "CLI, повторяющий структуру Yandex Audience API 1:1 (100% покрытие эндпоинтов)"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "yandex-audience-cli" }]
keywords = ["yandex", "audience", "api", "cli", "advertising"]
dependencies = [
    "typer>=0.12",
    "httpx>=0.27",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
    "respx>=0.21",
    "black>=24.0",
    "ruff>=0.6",
]
# Документация (GitHub Pages). Отдельная группа, чтобы тесты не зависели от доков.
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
]

[project.scripts]
yac = "yac:app"

# Раскладка-пакет: весь код под пакетом yac/ (с подпакетами api/ и commands/).
# Имена модулей живут в namespace yac.* и не конфликтуют с чужими top-level
# модулями в глобальном sys.path.
[tool.hatch.build.targets.wheel]
packages = ["yac"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
# e2e по умолчанию пропускается (conftest: skip без --run-e2e), поэтому фильтр
# по маркеру в addopts не нужен — `pytest tests/e2e --run-e2e` работает ожидаемо.
addopts = "-q"
markers = [
    "unit: изолированный модуль/функция, без сети",
    "integration: связка слоёв через respx-моки",
    "smoke: дымовой прогон CLI без сети (структура, справка, ошибки)",
    "e2e: сквозной прогон настоящего yac (локальный stub-сервер или боевой API)",
]

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.ruff]
line-length = 88
target-version = "py39"
# Выборка правил — дефолтная ruff (E4, E7, E9, F). E501 (длина строки) — забота black,
# поэтому явно не включаем (иначе E501 конфликтует с форматированием black).
